minor: css prevent horizontal scroll

--- a/css/main.css
+++ b/css/main.css
@@ -26,3 +26,8 @@ h3,h4,h5 {
 .pcrange {
     max-width: 300px;
 }
+
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
